[package]
name = "gen_timing_page"
version = "0.1.0"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reformation = "0.4.1"
reformation_derive = "0.4.1"
structopt = "0.2.18"
